--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="profile-card">
         <div class="image">
-            <img src="/IMG_20230325_132224_995.jpg" alt="" class="profile-img">
+            <img src="portable.jpg" alt="" class="profile-img">
         </div>
 
         <div class="text-data">
